@@ -12,6 +12,7 @@ Changes in 2.2.2
 - Enumerated SweepLineEvent's DELETE and INSERT labels
   renamed to DELETE_EVENT and INSERT_EVENT.
 - Fixed geos-config to use system-specific libs path
+- Accept correct WKT format for MultiPoints
 
 Changes in 2.2.1
 
